Increase doc sidebar width to prevent text wrapping

--- a/_sass/_docs.scss
+++ b/_sass/_docs.scss
@@ -7,7 +7,7 @@ h1 {
 // Sections
 #docs-sections {
   float: left;
-  width: 180px;
+  width: 190px;
   position: relative;
   z-index: 1;
   margin-right: 15px;
